# dictto

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PRIVACY.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tray.rs
apps/desktop/src-tauri/src/commands/: audio.rs  mod.rs  settings.rs  window.rs
apps/desktop/src-tauri/src/services/: autostart.rs  cursor_passthrough.rs  mod.rs  pipeline.rs
apps/desktop/src-tauri/src/services/audio/: device_monitor.rs  mod.rs  recorder.rs
apps/desktop/src-tauri/src/services/db/: keystore.rs  mod.rs  settings.rs
apps/desktop/src-tauri/src/services/hotkey/: mod.rs
apps/desktop/src-tauri/src/services/injector/: clipboard.rs  mod.rs
apps/desktop/src-tauri/src/services/llm/: mod.rs  openai_gpt.rs  prompts.rs
apps/desktop/src-tauri/src/services/sound/: mod.rs
apps/desktop/src-tauri/src/services/transcription/: mod.rs  openai_api.rs
apps/desktop/src-tauri/windows/: hooks.nsh
apps/desktop/src/components/recording-bar/: ContinuousControls.tsx  RecordingBar.tsx  StatusIndicator.tsx  Waveform.tsx
apps/desktop/src/data/: languages.ts
apps/desktop/src/hooks/: useRecording.ts  useWaveform.ts
apps/desktop/src/pages/: RecordingBar.tsx  Settings.tsx
apps/desktop/src/stores/: appStore.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/test/: setup.ts
(+12 files in other folders)
