[package]
name = "dictto"
version = "0.3.0"
description = "Voice-to-text desktop app"
authors = ["Fabian Cronhenko"]
edition = "2021"

[lib]
name = "dictto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
rusqlite = { version = "0.38", features = ["bundled"] }
hound = "3.5"

enigo = "0.6"
arboard = "3"
sys-locale = "0.3.2"
keyring = { version = "3", features = ["windows-native"] }
async-trait = "0.1"
thiserror = "2"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
tauri-plugin-log = "2"
winreg = "0.55"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Devices_Properties",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_System_Threading",
] }
